--- a/scss/theme/_header.scss
+++ b/scss/theme/_header.scss
@@ -19,7 +19,7 @@
   right: 0;
   transition: all 0.5s;
   z-index: 997;
-  background:$white;
+  background:$blue;
 }
 
 #header.header-scrolled {
@@ -114,8 +114,8 @@
   padding: 0 8px 0px 8px;
   text-decoration: none;
   display: inline-block;
-  color: $black;
-  font-weight:500;  
+  color: $offwhite;
+  font-weight:500;
   font-size: 12px;
   text-transform: uppercase;
   outline: none;
@@ -177,7 +177,7 @@
 
 #mobile-nav-toggle i {
   color: $black;
-  font-weight: 900;  
+  font-weight: 900;
 }
 
 @media (max-width: 991px) {
@@ -279,5 +279,3 @@ body.mobile-nav-active #mobile-nav {
 body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
-
-
