--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -117,7 +117,8 @@
 /*-------- Start Banner Area ------------*/
 
 .banner-area {
-    background:$offwhite;
+    background:$white;
+    color:$black;
     .fullscreen {
         height: 750px !important;
     }
@@ -133,13 +134,16 @@
         margin:20px 0;
         font-size:60px;
         text-transform:uppercase;
+        color:$offwhite;
+
         @media(max-width:991px){
             font-size:30px;
+            color:$offwhite;
         }
     }
     .primary-btn{
         @extend .p1-gradient-bg;
-        &:hover{    
+        &:hover{
             box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
         }
     }
@@ -176,6 +180,7 @@
         margin-bottom:30px;
         text-transform:uppercase;
         font-weight:400;
+        color:$blueoff;
     }
     h1{
         margin-bottom:40px;
@@ -189,7 +194,7 @@
     }
     .primary-btn{
         @extend .p1-gradient-bg;
-        &:hover{    
+        &:hover{
             box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
         }
     }
@@ -380,21 +385,21 @@
 }
 
 .single-portfolio{
-    border-radius:5px;  
+    border-radius:5px;
     &:hover{
         .thumb{
             .overlay-bg{
                 opacity:.85;
             }
         }
-    }    
+    }
 }
 
 .thumb{
     .overlay-bg{
         @extend .p1-gradient-bg;
         opacity:0;
-        border-radius:5px;  
+        border-radius:5px;
         @include transition();
     }
 }
@@ -404,12 +409,12 @@
 
 /*--------- start testimonial area  -------------*/
 
-.testimonial-area{  
+.testimonial-area{
     background-color:$offwhite;
     .owl-controls{
         position: absolute;
         left: 101%;
-        top: 25%;       
+        top: 25%;
         @media(max-width: 1024px){
             position:relative;
             text-align: center;
@@ -428,13 +433,13 @@
         padding: 14px;
         color: #000;
         font-weight: 500;
-        border: 1px solid #f5f5f5;  
+        border: 1px solid #f5f5f5;
         display:inline-flex;
         @include transition();
         &:hover{
             background:$primary-color;
             color:$white;
-        }   
+        }
     }
 
 }
@@ -458,7 +463,7 @@
          h4{
             color:$primary-color;
             cursor:pointer;
-         }  
+         }
     }
 }
 
@@ -470,12 +475,12 @@
 
 .price-area{
     .single-price{
-        @include transition();      
+        @include transition();
         text-align:center;
         background-color:$offwhite;
         padding:40px 20px;
         .package-no{
-            @include transition();  
+            @include transition();
             font-weight: 300;
             margin-left: auto;
             margin-right: auto;
@@ -485,7 +490,7 @@
             border-radius:100px;
             align-items: center;
             display: grid;
-            border:30px solid rgba(#8490ff, 0.10);  
+            border:30px solid rgba(#8490ff, 0.10);
         }
         .top-part h4{
             margin-top:20px;
@@ -510,8 +515,8 @@
                 color:$black;
                 padding:10px 50px;
                 font-weight:600;
-                display:inline-block;   
-                display:none;            
+                display:inline-block;
+                display:none;
             }
         }
 
@@ -527,7 +532,7 @@
             .package-no{
                 border-color: rgba(#ffffff,.21);
                 background-color:rgba(#ffffff,.1);
-            } 
+            }
             .bottom-part{
                 h1{
                     display:none;
@@ -535,7 +540,7 @@
                 .price-btn{
                     display:block;
                 }
-            }          
+            }
         }
 
         @media(max-width:960px){
@@ -574,7 +579,7 @@
                 width:100%;
             }
         }
-        
+
         h4{
             text-transform:uppercase;
             font-weight:600;
@@ -611,9 +616,9 @@
             .meta{
                 margin-top:0px;
             }
-            
-        }   
-    
+
+        }
+
         .f-img{
             @include transition();
         }
@@ -624,7 +629,7 @@
             }
             .f-img{
                 cursor:pointer;
-                transform: scale(1.05);             
+                transform: scale(1.05);
             }
         }
 
@@ -637,11 +642,11 @@
 
 .brands-area{
     padding:80px 0;
-    @extend .p1-gradient-bg; 
+    @extend .p1-gradient-bg;
     .brand-wrap{
             .owl-carousel .owl-item img{
             width:auto!important;
-        }   
+        }
         .single-brand{
             text-align:center;
             @include filter(grayscale, 100%);
@@ -694,5 +699,3 @@
 
 
 /*-------- End Common Page Style   -------------*/
-
-
