--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -1,10 +1,10 @@
 /******************************************************************
-Theme Name: Personal 
-Description: 
+Theme Name: Personal
+Description:
 Author: Colorlib
-Author URI: 
+Author URI:
 Version: 1.0
-Created: 
+Created:
 ******************************************************************/
 /*------------------------------------------------------------------
 
@@ -19,7 +19,7 @@ Created:
 	1.3	Flexbox
 	1.4	Reset
 2.  Elements
-3.  Menu Style 
+3.  Menu Style
 4.  Home Page Style
 5.  About Page Style
 6.  Department Page Style
@@ -36,13 +36,18 @@ Created:
 $primary-font	: 'Poppins', sans-serif;
 
 
-$primary-color	: #8490ff;
-$title-color	: #222222;
-$text-color		: #777777;
+$primary-color	: #070B5A;
+$sec-color	: #1D279E;
+$th-color	: #BC1B05;
+$fh-color: #FBC76E;
+
+$title-color	: #F8F7EF;
+$text-color		: #F8F7EF;
 
 $white			: #fff;
-$offwhite		: #f9f9ff;
-$black			: #222;
+$offwhite		: #F8F7EF;
+$blueoff: #7885AD;
+$black			: #160E1D;
 
 
 /*
@@ -59,4 +64,3 @@ $offwhite		: #f9f9ff;
 $black			: #222;
 
 */
-
